# flappyBird

./: CMakeLists.txt  config.json  todos.txt
.github/workflows/: ci.yml
config/: config.json
include/entity/: AEntity.hpp  Background.hpp  Bird.hpp  Floor.hpp  Pipe.hpp  PipePair.hpp
include/game/: Config.hpp  GameManager.hpp  Menu.hpp
scripts/: createClass.sh
src/: main.cpp
src/entity/: AEntity.cpp  Background.cpp  Bird.cpp  Floor.cpp  Pipe.cpp  PipePair.cpp
src/game/: Config.cpp  GameManager.cpp  Menu.cpp
